[MODORDERS-1343] Code refactoring for better readability